@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.7691 2004/11/04 12:16:10 wiz Exp $
+$NetBSD: CHANGES,v 1.7692 2004/11/04 12:18:54 xtraeme Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -5066,3 +5066,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated id3v2 to 0.1.11 [abs 2004-11-04]
 	Updated glibmm24 to 2.4.5 [adam 2004-11-04]
 	Updated vms-empire to 1.7 [wiz 2004-11-04]
+	Updated mips64emul to 0.2.2 [xtraeme 2004-11-04]
